--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "astro": "^5.2.3",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
+    "dotenv": "^16.4.7",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
     "unpic": "^3.22.0"
